...
        android:backgroundTint="#BFFFFFFF"
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCreateList"
        android:layout_width="254dp"
        android:layout_height="43dp"
        android:layout_marginTop="229dp"
        android:background="#BFFFFFFF"
        android:backgroundTint="#FFFFFF"
        android:bufferType="spannable"
        android:hint="   Enter New List Name"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@id/buttonCreateList"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBackHome" />

    <Button
        android:id="@+id/buttonCreateList"
...
