...
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Show Hike Details Button -->
    <Button
        android:id="@+id/buttonShowDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:backgroundTint="#BFFFFFFF"
        android:text="Show Hike Details"
        app:layout_constraintEnd_toEndOf="parent"
...
